/* SPDX-FileCopyrightText: 2026 Conduction B.V. <info@conduction.nl> */
/* SPDX-License-Identifier: EUPL-1.2 */
/* Generated from the Android strings (mobile/android/app/src/main/res); keep the keys the same. */

"tab_vault" = "Vault";
"tab_generator" = "Generator";
"tab_send" = "Send";
"action_back" = "Back";
"action_cancel" = "Cancel";
"action_save" = "Save";
"action_delete" = "Delete";
"action_close" = "Close";
"action_copy" = "Copy";
...
"cd_copy_field" = "Copy %1$@";
"cd_show_field" = "Show %1$@";
"cd_hide_field" = "Hide %1$@";
"cd_open_folder" = "Open folder %1$@";
"cd_open_item" = "Open %1$@";
"cd_switch_account" = "Switch account, now %1$@";
"cd_add_item" = "Add an item";
"cd_new_send" = "New Send";
"cd_folder_actions" = "Folder actions";
"cd_remove_field" = "Remove field %1$@";
"cd_regenerate" = "Generate a new value";
"copied" = "Copied. Cleared in %1$d seconds.";
"copied_kept" = "Copied.";
"accounts_title" = "Accounts";
...
"detail_missing" = "This item no longer exists.";
"detail_trash_confirm" = "Move %1$@ to the trash? You can restore it in the web app.";
"move_title" = "Move to folder";
"edit_new_title" = "New item";
"edit_title" = "Edit item";
"edit_type" = "Type";
"edit_name" = "Name";
"edit_url" = "Website address";
"edit_totp_secret" = "Authenticator secret or otpauth link";
"edit_add_field" = "Add a field";
"edit_field_name" = "Field name";
"edit_field_value" = "Field value";
"edit_passkey_note" = "Only the name, address, folder and notes of a passkey can change.";
...
"send_text_label" = "Text to send";
"send_views_label" = "Views";
"send_expiry_label" = "Expires after";
"send_hours_label" = "Hours";
"send_password_label" = "Password (optional)";
"send_password_unavailable" = "This device cannot protect a send with a password yet.";
"send_create" = "Create link";
"send_created" = "Your link is ready. Anyone with it can open the send.";
"send_created_password" = "Your link is ready. Share the password another way.";
"send_copy_link" = "Copy link";
"send_nothing" = "There is nothing to send.";
"send_views_range" = "Choose 1 to 100 views.";
"send_hours_range" = "Enter a whole number of hours, at least 1.";
...
